Added dm_control support

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 # To store all experiment data locally only.
-/data/  
+/data/
 # For quick local testing.
-/scratch/ 
+/scratch/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -111,3 +111,5 @@ venv.bak/
 
 # vim editing and such
 *.*~
+
+.idea/
